added comments with credits to source code files for Iris Perry

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,3 +1,7 @@
+<!-- written by: Austin Hoelscher, Anthony McAlpin, Isaac Nevarez-Saenz, & Iris Perry
+tested by: Austin Hoelscher, Anthony McAlpin, Isaac Nevarez-Saenz, & Iris Perry
+debugged by: Austin Hoelscher, Anthony McAlpin, Isaac Nevarez-Saenz, & Iris Perry -->
+
 <!DOCTYPE html>
 <html class="indexHtml" lang="en">
 
