--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,6 @@
+/* written by: Austin Hoelscher, Anthony McAlpin, Isaac Nevarez-Saenz, & Iris Perry
+debugged by: Austin Hoelscher, Anthony McAlpin, Isaac Nevarez-Saenz, & Iris Perry
+tested by: Austin Hoelscher, Anthony McAlpin, Isaac Nevarez-Saenz, & Iris Perry */
 
     body {    
         font-family: Arial, sans-serif !important;
