--- a/public/views/Appointments.html
+++ b/public/views/Appointments.html
@@ -1,3 +1,7 @@
+<!-- written by: Austin Hoelscher & Iris Perry
+tested by: Austin Hoelscher & Iris Perry
+debugged by: Austin Hoelscher & Iris Perry -->
+
 <!DOCTYPE html>
 <html lang="en">
 
