--- a/public/views/Appointments.html
+++ b/public/views/Appointments.html
@@ -1,6 +1,6 @@
-<!-- written by: Austin Hoelscher & Iris Perry
-tested by: Austin Hoelscher & Iris Perry
-debugged by: Austin Hoelscher & Iris Perry -->
+<!-- written by: Austin Hoelscher & Iris Perry, Isaac Nevarez-Saenz
+tested by: Austin Hoelscher & Iris Perry, Isaac Nevarez-Saenz
+debugged by: Austin Hoelscher & Iris Perry, Isaac Nevarez-Saenz -->
 
 <!DOCTYPE html>
 <html lang="en">
