--- a/public/views/Medications.html
+++ b/public/views/Medications.html
@@ -1,3 +1,7 @@
+<!-- written by: Isaac Nevarez-Saenz
+tested by: Isaac Nevarez-Saenz
+debugged by: Isaac Nevarez-Saenz -->
+
 <!DOCTYPE html>
 <html lang="en">
 
