--- a/public/views/providerDashboard.html
+++ b/public/views/providerDashboard.html
@@ -1,3 +1,7 @@
+<!-- written by: 
+tested by: Isaac Nevarez-Saenz
+debugged by: Isaac Nevarez-Saenz -->
+
 <!DOCTYPE html>
 <html class="indexHtml" lang="en">
 
