--- a/public/views/Activities.html
+++ b/public/views/Activities.html
@@ -1,6 +1,6 @@
-<!-- written by: Isaac Nevarez-Saenz
-tested by: Isaac Nevarez-Saenz
-debugged by: Isaac Nevarez-Saenz -->
+<!-- written by: Isaac Nevarez-Saenz, Anthony McAlpin
+tested by: Isaac Nevarez-Saenz, Anthony McAlpin
+debugged by: Isaac Nevarez-Saenz, Anthony McAlpin -->
 
 <!DOCTYPE html>
 <html lang="en">
