--- a/public/views/ResetPassword.html
+++ b/public/views/ResetPassword.html
@@ -1,3 +1,8 @@
+<!-- written by: Anthony McAlpin
+tested by:  Anthony McAlpin
+debugged by: Anthony McAlpin -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
