Added contribution commments

--- a/public/views/contactus.html
+++ b/public/views/contactus.html
@@ -1,6 +1,6 @@
 <!-- written by: Isaac Nevarez-Saenz
-tested by: 
-debugged by:  -->
+tested by: Austin Hoelscher
+debugged by: Austin Hoelscher -->
 
 <!DOCTYPE html>
 <html lang="en">
